--- a/Launcher/Launcher.Core.Gui/Style.xaml
+++ b/Launcher/Launcher.Core.Gui/Style.xaml
@@ -55,6 +55,6 @@
     <SolidColorBrush x:Key="IdealForegroundColorBrush" Color="{StaticResource IdealForegroundColor}"
                      options:Freeze="True" />
 
-    <ImageBrush ImageSource="pack://application:,,,/Launcher.Core.Gui;component/Design/BackgroundImage.png" x:Key="Background" />
+    <ImageBrush ImageSource="pack://application:,,,/Launcher.Core.Gui;component/Design/BackgroundImage.png" x:Key="Background" Stretch="UniformToFill"/>
     
 </ResourceDictionary>
