--- a/Launcher/Launcher.Module.Document/Views/HistoryView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/HistoryView.xaml
@@ -20,16 +20,14 @@
         <ListView x:Name="HisoryWrapPanel" Grid.ColumnSpan="3" Grid.RowSpan="3" >
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <WrapPanel 
-                        Width="{Binding (FrameworkElement.ActualWidth), RelativeSource={RelativeSource AncestorType=ScrollContentPresenter}}"
-                        ItemWidth="{Binding (ListView.View).ItemWidth, RelativeSource={RelativeSource AncestorType=ListView}}"
-                        MinWidth="{Binding ItemWidth, RelativeSource={RelativeSource Self}}"
-                        ItemHeight="{Binding (ListView.View).ItemHeight, RelativeSource={RelativeSource AncestorType=ListView}}"/>
+                    <WrapPanel/>
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <controls:Tile Content="{Binding Name}"></controls:Tile>
+                    <controls:Tile MinWidth="250">
+                        <TextBlock Text="{Binding Name}" TextWrapping="WrapWithOverflow" FontSize="20"></TextBlock>
+                    </controls:Tile>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
