--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -15,7 +15,7 @@
     <Window.Resources>
         <MatrixTransform x:Key="InitialMatrixTransform">
             <MatrixTransform.Matrix>
-                <Matrix OffsetX="900" OffsetY="900"/>
+                <Matrix OffsetX="200" OffsetY="200"/>
             </MatrixTransform.Matrix>
         </MatrixTransform>
     </Window.Resources>
@@ -37,8 +37,8 @@
         </StackPanel>
 
         <!--Сюда в старом образе у нас отображались данные -->
-        <moonPdfLib:MoonPdfPanel Grid.Row="1" Background="red" Grid.Column="1" RenderTransform="{StaticResource InitialMatrixTransform}" x:Name="PdfPanel" ManipulationStarting="Window_ManipulationStarting"
+        <moonPdfLib:MoonPdfPanel Grid.Row="1" Grid.Column="1" x:Name="PdfPanel" ManipulationStarting="Window_ManipulationStarting"
              ManipulationDelta="Window_ManipulationDelta"
-             ManipulationInertiaStarting="Window_InertiaStarting"/>
+             ManipulationInertiaStarting="Window_InertiaStarting" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.IsDeferredScrollingEnabled="False"/>
     </Grid>
 </Window>
