Возможное решение проблемы с маштабированием документа #1

--- a/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentView.xaml
@@ -15,7 +15,7 @@
     <Window.Resources>
         <MatrixTransform x:Key="InitialMatrixTransform">
             <MatrixTransform.Matrix>
-                <Matrix OffsetX="200" OffsetY="200"/>
+                <Matrix OffsetX="0" OffsetY="0"/>
             </MatrixTransform.Matrix>
         </MatrixTransform>
     </Window.Resources>
@@ -37,6 +37,6 @@
         </StackPanel>
 
         <!--Сюда в старом образе у нас отображались данные -->
-        <moonPdfLib:MoonPdfPanel Grid.Row="1" Grid.Column="1" x:Name="PdfPanel" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.IsDeferredScrollingEnabled="False"/>
+        <moonPdfLib:MoonPdfPanel Grid.Row="1" Grid.Column="1" x:Name="PdfPanel" RenderTransform="{StaticResource InitialMatrixTransform}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.IsDeferredScrollingEnabled="False"/>
     </Grid>
 </Window>
