--- a/Launcher/Launcher/App.xaml
+++ b/Launcher/Launcher/App.xaml
@@ -12,6 +12,9 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatButton.xaml" />
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Icons.xaml" />
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Style.xaml" />
                 <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/ListBox.xaml" />
