--- a/Launcher/Launcher.Module.Document/Views/DocumentListView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/DocumentListView.xaml
@@ -8,12 +8,11 @@
              d:DesignHeight="300" d:DesignWidth="300">
     
     <Grid>
-        <!-- Поменять SelectionChanged на что-то вменяе-->
         <ListBox x:Name="FileNameList" ItemContainerStyle="{StaticResource DocumentListBoxStyle}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel cal:Message.Attach="[Event MouseDown] = [Action ShowDoc($this)]" HorizontalAlignment="Left" VerticalAlignment="Stretch">
-                        <TextBlock Text="{Binding Name}"></TextBlock>
+                    <StackPanel cal:Message.Attach="[Event MouseDown] = [Action ShowDoc($this)]"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <TextBlock Text="{Binding Name}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
