--- a/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
+++ b/Launcher/Launcher.Core.Gui/Style/ListBox.xaml
@@ -219,6 +219,7 @@
 
     </Style>
 
+    <!-- Переопределение основного стиля выделения элементов -->
     <Style x:Key="FocusVisual">
         <Setter Property="Control.Template">
             <Setter.Value>
@@ -235,6 +236,7 @@
     <SolidColorBrush x:Key="Item.SelectedActive.Background" Color="Transparent"/>
     <SolidColorBrush x:Key="Item.SelectedActive.Border" Color="Transparent"/>
 
+    <!-- Основной стиль определения для горизонтального Listbox'а  1 Уровень. -->
     <Style x:Key="MainWindowListBoxTemplate" TargetType="{x:Type ListBoxItem}">
 
         <Setter Property="Padding" Value="1.3"/>
@@ -247,7 +249,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                    <Grid Margin="0,0,0,24.333" Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF167423">
+                    <Grid Margin="0,0,0,10" Width="auto" Height="auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF167423">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="118"/>
                             <ColumnDefinition/>
@@ -256,12 +258,23 @@
                             <Button x:Name="FirstContentButton" Content="Модуль 1" FontSize="20" BorderBrush="#FF167423" Background="#FF167423" Foreground="#FFF7F3F3" Margin="0,0,0,0" />
                         </Border>
                         <Border BorderBrush="#FF167423" BorderThickness="0,0,0,2" Grid.Column="1" HorizontalAlignment="Stretch" Height="124.7" Margin="2,0,0,0" VerticalAlignment="Top" Width="auto" Grid.ColumnSpan="1">
-                            <ListBox x:Name="MainListBoxInWindowShell" ScrollViewer.PanningMode="HorizontalOnly" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,-10.3" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="White">
+                            <ListBox x:Name="MainListBoxInWindowShell"  ScrollViewer.PanningMode="HorizontalOnly" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,-10.3" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="White">
                                 <ListBox.ItemsPanel>
                                     <ItemsPanelTemplate>
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                                     </ItemsPanelTemplate>
                                 </ListBox.ItemsPanel>
+                                <ListBox.ItemContainerStyle>
+                                    <Style/>
+                                </ListBox.ItemContainerStyle>
+                                <ListBoxItem Content="ListBoxItem 1" Template="{DynamicResource TwoLevel}" />
+                                <ListBoxItem Content="ListBoxItem 2" Template="{DynamicResource TwoLevel}"/>
+                                <ListBoxItem Content="ListBoxItem 3" Template="{DynamicResource TwoLevel}"/>
+                                <ListBoxItem Content="ListBoxItem 4" Template="{DynamicResource TwoLevel}"/>
+                                <ListBoxItem Content="ListBoxItem 5" Template="{DynamicResource TwoLevel}"/>
+                                <ListBoxItem Content="ListBoxItem 6" Template="{DynamicResource TwoLevel}"/>
+                                <ListBoxItem Content="ListBoxItem 7" Template="{DynamicResource TwoLevel}"/>
+                                <ListBoxItem Content="ListBoxItem 8" Template="{DynamicResource TwoLevel}"/>
                             </ListBox>
                         </Border>
                     </Grid>
@@ -270,9 +283,9 @@
         </Setter>
     </Style>
 
+    <!-- ХЗ что снизу серьёзно ..-->
 
-
-    <Style x:Key="ListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
+    <!--<Style x:Key="ListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Padding" Value="4,1"/>
         <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
@@ -307,7 +320,33 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
+
+    <!-- Шаблон Элемента отображения для  ListBoxItem'a вложенном в листбоксе-->
+
+    <!--<Style x:Key="Need" TargetType="ListBoxItem">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                            <RowDefinition></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Button Grid.ColumnSpan="2" Grid.RowSpan="3"  Width="170" Height="Auto" Margin="5,0,0,5" Background="#FF167423" Foreground="White">
+                            <ContentPresenter x:Name="ContentTwoLevel" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+                        </Button>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>   
+    </Style>-->
     <ControlTemplate x:Key="TwoLevel" TargetType="{x:Type ListBoxItem}">
         <Grid>
             <Grid.ColumnDefinitions>
