--- a/Launcher/Launcher/Views/Flyouts/FlyoutSearchView.xaml
+++ b/Launcher/Launcher/Views/Flyouts/FlyoutSearchView.xaml
@@ -3,21 +3,33 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
+    <!--<UserControl.Resources>
         <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
-    </UserControl.Resources>
+    </UserControl.Resources>-->
     <Grid>
-        <StackPanel Width="150" Margin="5,5,5,5">
-            <TextBlock Text="a test for left" />
-            <CheckBox Content="a simple checkbox" />
-            <RadioButton Content="a simple RadioButton" />
-            <ComboBox>
-                <ComboBoxItem>Item 1</ComboBoxItem>
-                <ComboBoxItem>Item 2</ComboBoxItem>
-                <ComboBoxItem>Item 3</ComboBoxItem>
-            </ComboBox>
-        </StackPanel>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="75"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <TextBox FocusManager.FocusedElement="{Binding RelativeSource={RelativeSource Self}}" x:Name="SearchString" Grid.Row="0" Margin="10" controls:TextboxHelper.Watermark="Поиск"
+                 FontSize="28"
+                 cal:Message.Attach="[Event TextChanged] = [Action Search(SearchString.Text)]">
+            <TextBox.Style>
+                <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource SearchMetroTextBox}" />
+            </TextBox.Style>
+        </TextBox>
+        
+        <ListBox x:Name="SearchResultList" Grid.Row="1" Margin="10" FontSize="24">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </UserControl>
