--- a/Launcher/Launcher/Views/ShellView.xaml
+++ b/Launcher/Launcher/Views/ShellView.xaml
@@ -35,7 +35,7 @@
                     <Setter Property="Header" Value="{Binding Header}" />
                     <Setter Property="IsOpen" Value="{Binding IsOpen}" />
                     <Setter Property="Position" Value="{Binding Position}" />
-                    <Setter Property="Height" Value="{Binding FlyoutWidth}"></Setter>
+                    <Setter Property="Width" Value="{Binding FlyoutWidth}" />
                 </Style>
             </Controls:FlyoutsControl.ItemContainerStyle>
         </Controls:FlyoutsControl>
